--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -57,10 +57,14 @@ body {
         display: block;
         width: 100%;
         z-index: 5;
-        background-color: rgba(255,111,116,.9);
         padding: 11rem 2rem 2rem;
         color: #FFF;
         margin-bottom: -2rem;
+
+        background: -moz-linear-gradient(top, $orange 0%, $pink 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, $orange 0%,$pink 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, $orange 0%,$pink 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$orange, endColorstr=$pink,GradientType=1 ); /* IE6-9 */
 
         ul.navbar-nav {
             
@@ -280,6 +284,8 @@ main {
 
         h1 {
             color: $navy;
+            font-size: 3em;
+            font-weight: normal;
         }
 
         h2 {
@@ -305,19 +311,24 @@ main {
 
 // Support Content
 .header-image {
-    background-color: $white;
+    background: url('/themes/wordplate/assets/images/default-header.jpg') center no-repeat $white;
     background-size: cover;
     background-position: center;
-    min-height: 150px;
+    min-height: 132px;
     display: flex;
     justify-content: center;
     text-align: center;
+
+    @media (min-width: 768px){
+        min-height: 120px;
+    }
 
     &.support {
         padding: 3rem 1rem;
         position: relative;
         overflow: hidden;
         z-index: 1;
+        border-bottom: 2px solid $orange;
 
         &::after {
             content: " ";
@@ -335,6 +346,11 @@ main {
             z-index: 2;
         }
     }
+}
+
+.mobile-menu-open .header-image {
+    min-height: 34px;
+    padding: 0;
 }
 
 // Main Slider
@@ -391,6 +407,29 @@ main {
             @media (min-width: 992px){
                 font-size: 80px;
             }
+        }
+    }
+}
+
+.mobile-menu-open .slider-container {
+    .slide-content {
+        padding: 0;
+    }
+}
+
+.weather-page {
+    i {
+        font-size: 2.5em;
+        color: $navy;
+    }
+
+    span {
+        color: $info;
+    }
+
+    .current-conditions {
+        span {
+            font-size: 2em;
         }
     }
 }
