--- a/public/themes/wordplate/assets/styles/app.css
+++ b/public/themes/wordplate/assets/styles/app.css
@@ -15208,6 +15208,39 @@ main.front p {
   }
 }
 
+.rental-feed .unit {
+  margin-bottom: 3rem;
+  padding: 0 0 3rem;
+  border-bottom: 2px solid #224b68;
+}
+
+.rental-feed .rental-feed-info {
+  padding: 0 1.25rem;
+  color: #224b68;
+}
+
+.rental-feed .rental-feed-info .tiles {
+  background-color: #224b68;
+  color: #fff;
+  margin: .5rem 0;
+}
+
+.rental-feed .rental-feed-info .data {
+  font-family: "Fira Sans Condensed", sans-serif;
+  text-align: center;
+  display: block;
+  color: #4ebacb;
+  margin: .5rem 0 0;
+  font-size: 1.8em;
+}
+
+.rental-feed .rental-feed-info .label {
+  font-family: "Fira Sans Condensed", sans-serif;
+  text-align: center;
+  display: block;
+  margin: 0 0 .5rem;
+}
+
 .testimonials .testimonial {
   padding-top: 2.75rem;
 }
