--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -502,6 +502,7 @@ main {
 
     @media (min-width: 768px){
         background: url('/themes/wordplate/assets/images/sand-large.jpg') no-repeat #f1efeb;
+        background-size: cover;
     }
 
     .bubble-button {
@@ -598,6 +599,35 @@ main {
         &.feat-two {
             background: url('/themes/wordplate/assets/images/photo-gallery-bg.jpg') no-repeat;
             background-size: cover;
+        }
+    }
+
+    &.travel-guide {
+        .feature-box {
+            &.feat-one {
+                background: url('/themes/wordplate/assets/images/amberjack.jpg') no-repeat;
+                background-size: cover;
+            }
+            &.feat-two {
+                background: url('/themes/wordplate/assets/images/things-to-do.jpg') no-repeat;
+                background-size: cover;
+            }
+            &.feat-three {
+                background: url('/themes/wordplate/assets/images/canal-history.jpg') no-repeat;
+                background-size: cover;
+            }
+            &.feat-five {
+                background: url('/themes/wordplate/assets/images/sunset.jpg') no-repeat;
+                background-size: cover;
+            }
+
+            &.feat-one, &.feat-two, &.feat-three, &.feat-five {
+                box-shadow: inset 0 -40px 40px rgba(0,0,0,.4);
+
+                h3 {
+                    text-shadow: 0 0 10px rgba(0,0,0,.2);
+                }
+            }
         }
     }
 
