--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -293,6 +293,10 @@ main {
             font-size: 16px;
         }
 
+        td {
+            font-size: 16px;
+        }
+
         h1 {
             color: $navy;
             font-size: 3em;
