scroll to on open calendar

--- a/public/themes/wordplate/assets/styles/main.css
+++ b/public/themes/wordplate/assets/styles/main.css
@@ -15265,6 +15265,7 @@ main.front p {
 
 .feature-box-section .feature-box p {
   margin-bottom: 1rem;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
