--- a/resources/assets/styles/theme.scss
+++ b/resources/assets/styles/theme.scss
@@ -592,6 +592,7 @@ main {
 
         p {
             margin-bottom: 1rem;
+            width: 100%;
 
             @media (min-width: 768px){
                 margin-bottom: 2rem;
