--- a/public/themes/wordplate/assets/styles/app.css
+++ b/public/themes/wordplate/assets/styles/app.css
@@ -15253,6 +15253,7 @@ main.front p {
 
 .feature-box-section .feature-box p {
   margin-bottom: 1rem;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
